charts/umbrella/bpndiscovery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-bpndiscovery
  namespace: portal
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/cors-allow-origin: http://semantics.51.178.94.25.nip.io
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: semantics.51.178.94.25.nip.io
    http:
      paths:
      - path: /bpndiscovery(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: portal-bpndiscovery
            port:
              number: 8080
  tls:
  - hosts:
    - semantics.51.178.94.25.nip.io
    secretName: tls-secret
