charts/umbrella/selfdescription-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-selfdescription
  namespace: portal
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sdfactory.51.178.94.25.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal-selfdescription
            port:
              number: 80
